# flet-django

./: .envrc  .flake8  .gitignore  LICENSE  POETRY_README.md  README.md  hello.py  main_app.py  pyproject.toml  run_app.sh  run_server.sh  tox.ini
.github/workflows/: tox.yml
demo/: settings.py
flet_django/: __init__.py  apps.py  compat.py  middlewares.py  navigation.py  pages.py  routes.py  types.py  urls.py  views.py
flet_django/controls/: __init__.py  modelform.py  modeltable.py
flet_django/management/commands/: run_app.py
frontend/: .gitignore  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
my_app/: apps.py
tasks/: admin.py  ft_urls.py  ft_views.py  models.py  todo_app.py
tasks/management/commands/: tasks.py  tasks_list.py  todo.py
tasks/migrations/: 0001_initial.py
tests/: __init__.py  settings.py  test_my_app.py  urls.py
