[tool.poetry]
name = "flet-django"
version = "0.4.2"
description = "Django Flutter Framework."
license = "MIT"
authors = ["beret <beret@hipisi.org.pl>"]  # Here is a place for You'r name, contributors welcome!
maintainers = ["Marysia Software Limited <office@marysia.app>"]  # Here is You'r advertising site.
readme = "README.md"
homepage = "https://marysia.app"
repository = "https://github.com/Marysia-Software-Limited/flet-django"
documentation = "https://github.com/Marysia-Software-Limited/flet-django"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: MacOS X",
    "Environment :: WebAssembly",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Other",
    "Topic :: Desktop Environment"
]
packages = [{ include = "flet_django" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0"
flet = "*"
flet-core = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

django-extensions = "*"
django-rest-framework = "*"
werkzeug = "*"


# for local development only
#flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
#flet = {path = "../flet/sdk/python/packages/flet", develop = true}
#flet-routed-app = {path = "../flet-routed-app", develop = true}
#django = {path = "../django", develop = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
